# CosmoFuse

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
src/CosmoFuse/: __init__.py  correlation_helpers.py  correlations.py  correlations_GPU.py  utils.py  visualisation.py
tests/: __init__.py  test.ipynb  test_correlation_helpers.py  test_correlations.py  test_cpu_correlations.py  test_utils.py
tests/data/: DESY3_Mask.fits
