[project]
name = "package"
version = "0.1.0"
authors = [
  { name="David Gebauer", email="git@gebauer.ai" },
]
description = "A small package for measuring correlation functions"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/"
"Bug Tracker" = "https://github.com/"


