[project]
name = "CosmoFuse"
version = "0.2.0"
authors = [
  { name="David Gebauer", email="git@gebauer.ai" },
]
description = "A small package for measuring correlation functions"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.9",
    "numba>=0.50",
    "healpy>=1.10",
    "h5py>=3.0",
    "matplotlib>=3.5",
]

[project.urls]
"Homepage" = "https://github.com/D-Gebauer/CosmoFuse"

